# controllers/emailUrlAuthController.js
@@ -3,15 +3,18 @@ const registrationTemplate = require("../templates/registrationTemplate");
 
 const loginOtpTemplate = require("../templates/loginOtpTemplate");
 const jwt = require("jsonwebtoken");
-const OtpModel = require("../models/OtpModel");
+
 const { nodemailerOtpHelper, sendEmail } = require("../email/brevo");
-const { validateEmail } = require("../middlewares/validateEmail");
+const { validateEmail } = require("../middleware/validateEmail");
 const constants = require("../utils/constants");
 const { generateOtp } = require("../utils/otp");
-const { generateJwt } = require("../utils/jwtUtil");
+const { generateJwt, verifyJwt, decodeJwt } = require("../utils/jwtUtil");
 const { cloudinaryUpload } = require("../utils/cloudinaryUtil");
+const VerificationTokenModel = require("../models/VerificationTokenModel");
+const { compareData, hashData } = require("../utils/bcryptUtil");
 
 exports.register = async (req, res) => {
+  // console.log(req.body);
   let file = null;
   try {
     const { firstName, lastName, email, role, password } = req.body;
@@ -44,8 +47,10 @@ exports.register = async (req, res) => {
       profilePicture,
       password: hashedPassword,
     });
-
-     let link = `${req.protocol}://${req.get("host")}/api/v1/auth/verify/${user._id}`;
+    const token = await generateJwt({ id: user._id }, constants.jwt_expiry);
+    let link = `${req.protocol}://${req.get("host")}/api/v1/auth/verify/${
+      user._id
+    }/?token=${token}`;
 
     const text = `EduFunds Account verification`;
     const html = registrationTemplate(link);
@@ -56,19 +61,19 @@ exports.register = async (req, res) => {
       html,
     });
 
-    link = await generateJwt({ otp }, constants.otp_expiry);
-
-    await OtpModel.deleteMany({ userId: user._id }); // Delete previous OTPs
-    await OtpModel.create({
+    await VerificationTokenModel.deleteMany({ userId: user._id });
+    await VerificationTokenModel.create({
       userId: user._id,
-      otp,
+      token,
     });
 
     await user.save();
-    res.status(201).json({ message: "OTP sent successfully", data: user });
+    res
+      .status(201)
+      .json({ message: "Success, check your email to verify your account" });
   } catch (error) {
     console.log(error);
-    // if (file && file.path) fs.unlinkSync(file.path);
+    console.log(error);
     res
       .status(500)
       .json({ message: "Internal Server Error", error: error.message });
@@ -77,115 +82,32 @@ exports.register = async (req, res) => {
 
 exports.login = async (req, res) => {
   try {
-    const { email } = req.body;
+    const { email, password } = req.body;
 
-    if (!validateEmail(email)) {
-      return res.status(400).json({ message: "Please provide a vlide email!" });
-    }
+    const user = await UserModel.findOne({ email }).select("+password");
 
-    const user = await UserModel.findOne({ email });
-    // console.log(email);
     if (!user) {
       return res
         .status(404)
         .json({ message: "User not found, please create an account" });
     }
 
-    // if (!user.isVerified) {
-    //   return res.status(500).json({
-    //     message: "User not verified, please verify account to continue",
-    //   });
-    // }
+    if (!user.isVerified) {
+      return res.status(500).json({
+        message: "User not verified, please verify account to continue",
+      });
+    }
 
-    let otp = await generateOtp();
+    if (compareData(password, user.password)) {
+      return res
+        .status(400)
+        .json({ message: "Please provide a valid account password" });
+    }
 
-    const text = `EduFunds Account verification`;
-    const html = loginOtpTemplate(otp);
-    await sendEmail({
-      email,
-      subject: "EduFunds Account Login",
-      text,
-      html,
-    });
-
-    otp = await generateJwt({ otp }, constants.otp_expiry);
-
-    await OtpModel.deleteMany({ userId: user._id }); // Delete previous OTPs
-    await OtpModel.create({
-      userId: user._id,
-      otp,
-    });
+    const token = await generateJwt({ id: user._id }, "1d");
 
     // console.log(otp);
-    res
-      .status(200)
-      .json({ message: "OTP sent successfully, check your email" });
-  } catch (error) {
-    console.log(error);
-    res
-      .status(500)
-      .json({ message: "Internal Server Error", error: error.message });
-  }
-};
-
-exports.verifyOtp = async (req, res) => {
-  try {
-    const { userId } = req.params;
-    const { otp } = req.body;
-
-    const user = await UserModel.findById(userId);
-
-    if (!user) {
-      return res
-        .status(404)
-        .json({ message: "User not found, please create an account" });
-    }
-
-    res
-      .status(200)
-      .json({ message: "OTP verification successful ✅", data: user });
-  } catch (error) {
-    console.log(error);
-    res.status(500).json({
-      message: "Internal server error verifying OTP",
-      error: error.message,
-    });
-  }
-};
-
-exports.resendOtp = async (req, res) => {
-  try {
-    const { userId } = req.params;
-
-    const user = await UserModel.findById(userId);
-
-    if (!user) {
-      return res
-        .status(404)
-        .json({ message: "User not found, please create an account" });
-    }
-
-    let otp = generateOtp();
-
-    const text = `EduFunds otp resend request`;
-    const html = loginOtpTemplate(otp);
-    await sendEmail({
-      email: user.email,
-      subject: "EduFunds Account Login",
-      text,
-      html,
-    });
-
-    otp = generateJwt({ otp }, constants.otp_expiry);
-
-    await OtpModel.deleteMany({ userId: user._id }); // Delete previous OTPs
-    await OtpModel.create({
-      userId: user._id,
-      otp,
-    });
-
-    // console.log(otp);
-    res.status(200).json({ message: "OTP sent successfully", data: user });
+    res.status(200).json({ message: "Success, user logged in", token });
   } catch (error) {
     console.log(error);
     res
@@ -197,10 +119,38 @@ exports.resendOtp = async (req, res) => {
 exports.verifyUser = async (req, res) => {
   try {
     const { userId } = req.params;
+    const { token } = req.query;
 
+    const tokenDetails = await VerificationTokenModel.findOne({ token });
+    if (!tokenDetails) {
+      return res
+        .status(404)
+        .json({ message: "Token expired, please request a new verification" });
+    }
+
+    if ((await verifyJwt(tokenDetails.token)) === false) {
+      return res
+        .status(404)
+        .json({ message: "Invalid token, please request a new verification" });
+    }
+    if (tokenDetails.userId.toString() !== userId) {
+      return res
+        .status(404)
+        .json({ message: "Wrong user, please request a new verification" });
+    }
     const user = await UserModel.findById(userId);
 
     if (!user) {
+      return res
+        .status(404)
+        .json({ message: "User not found, please create an account" });
+    }
+
+    const verificationToken = await VerificationTokenModel.findOne({
+      userId,
+    });
+
+    if (!verificationToken) {
       return res
         .status(404)
         .json({ message: "User not found, please create an account" });
@@ -219,9 +169,110 @@ exports.verifyUser = async (req, res) => {
       .json({ message: "User verification successful ✅", data: user });
   } catch (error) {
     console.log(error);
+    console.log(error);
     res.status(500).json({
-      message: "Internal server error verifying user",
+      message: "Internal server error verifying OTP",
       error: error.message,
     });
   }
 };
+
+exports.resendVerificationLink = async (req, res) => {
+  try {
+    const { userId } = req.params;
+
+    const user = await UserModel.findById(userId);
+
+    if (!user) {
+      return res
+        .status(404)
+        .json({ message: "User not found, please create an account" });
+    }
+
+    if (user.isVerified) {
+      return res.status(403).json({
+        message: "User already verified, please login to continue",
+      });
+    }
+    let token;
+    let verificationToken = await VerificationTokenModel.findOne({
+      userId,
+    });
+    if (!verificationToken) {
+      token = await generateJwt({ id: user._id }, constants.otp_expiry);
+      verificationToken = await VerificationTokenModel.create({
+        userId,
+        token,
+      });
+    } else {
+      token = verificationToken.token;
+    }
+
+    const link = `${req.protocol}://${req.get("host")}/api/v1/auth/verify/${
+      user._id
+    }?token=${token}`;
+
+    const text = `EduFunds Account verification`;
+    const html = registrationTemplate(link);
+    await sendEmail({
+      email: user.email,
+      subject: "EduFunds Account Verification",
+      text,
+      html,
+    });
+
+    res.status(200).json({
+      message: "Verification link sent successfully, check your email",
+    });
+  } catch (error) {
+    console.log(error);
+    console.log(error);
+    res
+      .status(500)
+      .json({ message: "Internal Server Error", error: error.message });
+  }
+};
+
+exports.resetPassword = async (req, res) => {
+  try {
+    const { userId } = req.params;
+    const { newPassword, oldPassword } = req.body;
+
+    const user = await UserModel.findById(userId);
+
+    if (!user) {
+      return res
+        .status(404)
+        .json({ message: "User not found, please create an account" });
+    }
+
+    if (user.isVerified === false) {
+      return res
+        .status(403)
+        .json({ message: "User not verified, please verify your account" });
+    }
+
+    if (compareData(oldPassword, user.password)) {
+      return res
+        .status(400)
+        .json({ message: "Please provide a valid initial account password" });
+    }
+
+    if (compareData(newPassword, oldPassword)) {
+      return res
+        .status(400)
+        .json({ message: "New password cannot be same as old password" });
+    }
+    const hashedPassword = hashData(password);
+    Object.assign(user, { password: hashedPassword });
+    await user.save();
+    res.status(200).json({ message: "Password reset successful", data: user });
+  } catch (error) {
+    console.log(error);
+    return res
+      .status(500)
+      .json({ message: "Internal Server Error", error: error.message });
+  }
+};
+
+exports.forgotPassword = async (req, res) => {};
